--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "version": "0.1.0",
+  "name": "joaobelopt",
+  "version": "6.0.0",
   "private": true,
   "dependencies": {
     "node-sass-chokidar": "^1.2.2",
