--- a/now.json
+++ b/now.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "name": "joaobelo.pt",
+  "alias": "joaobelo.pt",
   "builds": [
     {"src": "package.json", "use": "@now/static-build", "config": {"distDir": "build"}}
   ],
