--- a/now.json
+++ b/now.json
@@ -3,7 +3,11 @@
   "name": "joaobelo.pt",
   "alias": "now.joaobelo.pt",
   "builds": [
-    {"src": "package.json", "use": "@now/static-build", "config": {"distDir": "build"}}
+    {
+      "src": "package.json",
+      "use": "@now/static-build",
+      "config": {"distDir": "build"},
+    }
   ],
   "routes": [
     {"src": "/static/(.*)", "headers": {"cache-control": "s-maxage=31536000,immutable"}, "dest": "/static/$1"},
