--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "joaobelo",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "clear": "rm -rf node_modules build"
+  },
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -9,12 +16,6 @@
     "react-tabs": "^3.0.0",
     "styled-components": "^4.2.0",
     "styled-system": "^4.2.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
