--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clear": "rm -rf node_modules build"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "^3.0.1",
@@ -20,8 +21,10 @@
   "devDependencies": {
     "generact": "^0.4.0",
     "husky": "^2.3.0",
+    "jest-styled-components": "^6.3.1",
     "lint-staged": "^8.1.7",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "react-test-renderer": "^16.8.6"
   },
   "eslintConfig": {
     "extends": "react-app"
